--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,17 @@
 .thumb {
 	z-index: 100;
 }
+
+  body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+
+  main {
+    flex: 1 0 auto;
+  }
+
+.timerH3 {
+	margin-top:0px;
+}
